Fixed up some site spacing

--- a/src/app/components/entry/entry.scss
+++ b/src/app/components/entry/entry.scss
@@ -17,6 +17,7 @@
         display: inline-block;
         color: $standard;
         transition: all 0.5s;
+        margin-bottom: 10px;
       }
     }
 
